--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,10 +3,16 @@
 .home {
 
   .title{    
+
+    position: fixed;
+    top: 0;
     width: 100vw;
-    position: relative;
     margin-left: -50vw;
     left: 50%;
+    overflow: hidden;
+    opacity: .99;
+
+
     background: @nav-bg;   
     border-bottom: 1px solid @nav-border;
     color: @nav-font;
@@ -18,6 +24,8 @@
 
 
   .intro {
+
+    margin-top: 103px;
 
     h2 {
       padding: 15px;
