--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,10 +1,10 @@
 // Navigation code here
 
 nav{
-
-    // .test();
     width: 55%;
-    .flex(row, space-evenly, center);    
+    .flex(row, space-evenly, center);  
+    position: sticky;
+    top: 0;  
 
     @media @phone{
         width: 100%;
